tests/spec/fail/list_extend_non_list.aja
nums = [1]
nums.extend(2)
